[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1.0"
rand = "0.8.5"
reqwest = {version = "0.11.27", features = ["json"]}
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
tungstenite = "0.21.0"
url = "2.5.0"

